Fixed Mlie's Roads of the Rim detection.

--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -354,20 +354,20 @@
     <Compile Include="Books+Buildings\PlaceWorker_ShootingRange.cs" />
     <Compile Include="Base\BackupState.cs" />
     <None Include="Legacy\StockGenerator_TechBooks.cs" />
-    <None Include="Extensions\Extension_Research.cs" />
+    <Compile Include="Extensions\Extension_Research.cs" />
     <Compile Include="Extensions\TechMapping.cs" />
     <Compile Include="Extensions\SkillMapping.cs" />
     <Compile Include="Extensions\Extensions.cs" />
     <Compile Include="Base\ResearchTreeHelper.cs" />
-    <None Include="Graphic\ExpertiseNode.cs" />
-    <None Include="Harmony\Compatibility\SimpleSidearms_Patches.cs" />
+    <Compile Include="Graphic\ExpertiseNode.cs" />
+    <Compile Include="Harmony\Compatibility\SimpleSidearms_Patches.cs" />
     <Compile Include="Harmony\Compatibility\VFEM_Patches.cs" />
-    <None Include="Harmony\EquipmentUtility_CanEquip.cs" />
-    <None Include="Harmony\JobGiver_PickUpOpportunisticWeapon_ShouldEquipUtilityItem.cs" />
-    <None Include="Harmony\JobGiver_PickUpOpportunisticWeapon_ShouldEquipWeapon.cs" />
+    <Compile Include="Harmony\EquipmentUtility_CanEquip.cs" />
+    <Compile Include="Harmony\JobGiver_PickUpOpportunisticWeapon_ShouldEquipUtilityItem.cs" />
+    <Compile Include="Harmony\JobGiver_PickUpOpportunisticWeapon_ShouldEquipWeapon.cs" />
     <None Include="Legacy\JobGiver_PickUpOpportunisticWeapon_ShouldEquip.cs" />
-    <None Include="Harmony\Pawn_JobTracker_TryTakeOrderedJob.cs" />
-    <None Include="Harmony\ResearchTree_ResearchPal\ResearchTree_Patches.cs" />
+    <Compile Include="Harmony\Pawn_JobTracker_TryTakeOrderedJob.cs" />
+    <Compile Include="Harmony\ResearchTree_ResearchPal\ResearchTree_Patches.cs" />
     <Compile Include="Harmony\Toils_Recipe_Patch.cs" />
     <Compile Include="Harmony\Compatibility\Hospitality_Patches.cs" />
     <Compile Include="Harmony\StatsToDraw_Patch.cs" />
@@ -380,7 +380,7 @@
     <Compile Include="Base\TechWorkDefOf.cs" />
     <Compile Include="Base\TechDefOf.cs" />
     <Compile Include="Books+Buildings\Building_BookStore.cs" />
-    <None Include="Books+Buildings\StockGenerator_TechBooks.cs" />
+    <Compile Include="Books+Buildings\StockGenerator_TechBooks.cs" />
     <Compile Include="Books+Buildings\CompTitleMaker.cs" />
     <Compile Include="Books+Buildings\CompProperties_TitleMaker.cs" />
     <Compile Include="Books+Buildings\CompProperties_StorageGraphic.cs" />
@@ -434,7 +434,7 @@
     <Compile Include="Knowledge\CompKnowledge.cs" />
     <Compile Include="Base\ModBaseHumanResources.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <None Include="Work\WorkGiver_Knowledge.cs" />
+    <Compile Include="Work\WorkGiver_Knowledge.cs" />
     <Compile Include="Work\WorkGiver_ScanBook.cs" />
     <Compile Include="Work\WorkGiver_DocumentTech.cs" />
     <Compile Include="Work\WorkGiver_ExperimentWeapon.cs" />
