--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Harmony\StatsToDraw_Patch.cs" />
     <Compile Include="Harmony\ThingFilterUI_DoThingFilterConfigWindow.cs" />
     <Compile Include="Harmony\ThingOwner_NotifyAdded.cs" />
+    <Compile Include="Harmony\ResearchProjectDef_CostApparent.cs" />
     <Compile Include="Harmony\ThingOwner_NotifyRemoved.cs" />
     <Compile Include="Harmony\ThingOwner_TryAddOrTransfer.cs" />
     <Compile Include="Harmony\ThingOwnerUtility_GetAllThingsRecursively.cs" />
