--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Harmony\MainTabWindow_Inspect_GetLabel.cs" />
     <Compile Include="Harmony\ResearchManager_ApplyTechprint.cs" />
     <Compile Include="Harmony\ResearchManager_Patches.cs" />
+    <Compile Include="Harmony\ResearchTree_ResearchPal\ResearchTree_Watcher.cs" />
     <Compile Include="Harmony\ResearchTree_ResearchPal\ResearchTree_Assets.cs" />
     <Compile Include="Harmony\ResearchTree_ResearchPal\ResearchTree_Constants.cs" />
     <Compile Include="Harmony\ResearchTree_ResearchPal\ResearchTree_Tree.cs" />
