--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -190,6 +190,10 @@
     <Compile Include="Extensions\SkillMapping.cs" />
     <Compile Include="Extensions\TechMapping.cs" />
     <Compile Include="Harmony\Alert_NeedResearchProject_GetReport.cs" />
+    <Compile Include="Harmony\Anomaly\ReadingOutcomeDoerGainAnomalyResearch_OnReadingTick.cs" />
+    <Compile Include="Harmony\Anomaly\Pawn_InteractionsTracker_TryInteractWithBase.cs" />
+    <Compile Include="Harmony\Anomaly\ResearchManager_ApplyKnowledge.cs" />
+    <Compile Include="Harmony\Anomaly\StudyManager_StudyAnomaly.cs" />
     <Compile Include="Harmony\Bill_IsFixedOrAllowedIngredient.cs" />
     <Compile Include="Harmony\Bill_PawnAllowedToStartAnew.cs" />
     <Compile Include="Harmony\Compatibility\SemiRandom_Patch.cs" />
@@ -278,7 +282,7 @@
   <ItemGroup Condition="'$(Configuration)' != '1.1' AND '$(Configuration)' != '1.2' AND '$(Configuration)' != '1.3'">
     <Compile Include="Harmony\Compatibility\SimpleSidearms_Patches.cs" />
   </ItemGroup>
-    <ItemGroup Condition="'$(Configuration)' != '1.5'">
+  <ItemGroup Condition="'$(Configuration)' != '1.5'">
     <Compile Include="Legacy\CompUseEffect_LearnRandomResearchProject_RW1.4.cs" />
     <Compile Include="Legacy\ResearchManager_ApplyTechprint_RW1.4.cs" />
     <Compile Include="Legacy\CompKnowledge_RW1.4.cs" />
